--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "npx webpack",
-		"watch": "env NODE_ENV=development npm run build"
+		"watch": "env NODE_ENV=development npm run build",
+		"prodBuild": "env NODE_ENV=production npm run build"
 	},
 	"repository": {
 		"type": "git",
