Add a WIP c2m parser

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
 	"compilerOptions": {
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"target": "ES6",
+		"moduleResolution": "node"
 	}
 }
