--- a/package.json
+++ b/package.json
@@ -20,21 +20,23 @@
 		"url": "https://github.com/TheGLander/NotCC/issues"
 	},
 	"homepage": "https://github.com/TheGLander/NotCC#readme",
-	"dependencies": {
-		"deepclone": "^1.0.2",
-		"pixi.js": "^5.3.2"
-	},
 	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^4.19.0",
+		"@typescript-eslint/parser": "^4.19.0",
 		"babel-minify-webpack-plugin": "^0.3.1",
 		"copy-webpack-plugin": "^5.1.1",
 		"css-loader": "^3.5.3",
+		"deepclone": "^1.0.2",
 		"eslint": "^6.8.0",
+		"eslint-config-prettier": "^8.1.0",
+		"eslint-plugin-prettier": "^3.3.1",
 		"html-webpack-plugin": "^4.2.1",
 		"keycode": "^2.2.0",
+		"pixi.js": "^5.3.2",
 		"progress-webpack-plugin": "0.0.24",
 		"style-loader": "^1.2.1",
 		"ts-loader": "^7.0.1",
-		"typescript": "^3.8.3",
+		"typescript": "^4.2.3",
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.11"
 	}
