--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
 		"target": "ES6",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
-		"sourceMap": true
+		"sourceMap": true,
+		"strict": true
 	}
 }
