--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
 		"eslint-plugin-prettier": "^3.3.1",
 		"html-webpack-plugin": "^4.2.1",
 		"keycode": "^2.2.0",
-		"pixi.js": "^5.3.2",
 		"progress-webpack-plugin": "0.0.24",
 		"style-loader": "^1.2.1",
 		"ts-loader": "^7.0.1",
+		"twgl.js": "^4.19.1",
 		"typescript": "^4.2.3",
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.11"
