--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
 		"eslint": "^6.8.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-prettier": "^3.3.1",
-		"html-webpack-plugin": "^4.2.1",
+		"html-webpack-plugin": "^5.3.1",
 		"keycode": "^2.2.0",
-		"progress-webpack-plugin": "0.0.24",
+		"progress-webpack-plugin": "^1.0.12",
 		"style-loader": "^1.2.1",
 		"ts-loader": "^8.1.0",
 		"twgl.js": "^4.19.1",
 		"typescript": "^4.2.3",
-		"webpack": "^4.43.0",
-		"webpack-cli": "^3.3.11"
+		"webpack": "^5.31.2",
+		"webpack-cli": "^4.6.0"
 	}
 }
