--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
 		"eslint:recommended",
 		"plugin:@typescript-eslint/eslint-recommended",
 		"plugin:@typescript-eslint/recommended",
-		"prettier"
+		"plugin:prettier/recommended"
 	],
 	"globals": {
 		"Atomics": "readonly",
@@ -23,10 +23,9 @@
 	},
 	"plugins": ["@typescript-eslint", "prettier"],
 	"rules": {
-		"indent": [0, "tab", { "SwitchCase": 1 }], //Prettier automatically handles this too
+		"indent": [0], //Prettier automatically handles this too
 		"linebreak-style": ["error", "unix"],
-		"quotes": [0, "double"], //Prettier automatically handles them
-		"semi": ["error", "never"],
+		"quotes": [0], //Prettier automatically handles them
 		"prettier/prettier": "error",
 		"@typescript-eslint/ban-types": ["error", { "types": { "object": false } }]
 	}
