--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -19,14 +19,14 @@
 	},
 	"homepage": "https://github.com/TheGLander/NotCC#readme",
 	"devDependencies": {
-		"babel-minify-webpack-plugin": "^0.3.1",
 		"copy-webpack-plugin": "^5.1.1",
-		"css-loader": "^3.5.3",
+		"css-loader": "^5.2.6",
 		"deepclone": "^1.0.2",
 		"html-webpack-plugin": "^5.3.1",
 		"keycode": "^2.2.0",
+		"mini-css-extract-plugin": "^1.6.0",
 		"progress-webpack-plugin": "^1.0.12",
-		"style-loader": "^1.2.1",
+		"terser-webpack-plugin": "^5.1.2",
 		"ts-loader": "^8.1.0",
 		"twgl.js": "^4.19.1",
 		"typescript": "^4.2.3",
