--- a/logic/package.json
+++ b/logic/package.json
@@ -26,6 +26,8 @@
 		"@rollup/plugin-node-resolve": "^7.1.3",
 		"deepclone": "^1.0.2",
 		"dts-bundle-generator": "^5.6.0",
+		"fast-printf": "^1.6.5",
+		"path-browserify": "^1.0.1",
 		"rollup": "^2.47.0",
 		"rollup-plugin-analyzer": "^3.3.0",
 		"rollup-plugin-terser": "^7.0.2",
