--- a/cli/package.json
+++ b/cli/package.json
@@ -18,7 +18,9 @@
 	},
 	"devDependencies": {
 		"@types/node": "^15.3.0",
+		"@types/prompts": "^2.0.12",
 		"chalk": "^2.4.2",
-		"ora": "^5.4.0"
+		"ora": "^5.4.0",
+		"prompts": "^2.4.1"
 	}
 }
