--- a/logic/package.json
+++ b/logic/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "npx rollup -c",
-		"watch": "env NODE_ENV=development npm run build",
+		"watch": "env NODE_ENV=development npm run build -- --watch",
 		"build-dts": "npx dts-bundle-generator src/index.ts -o dist/index.d.ts",
 		"prodBuild": "env NODE_ENV=production npm run build"
 	},
