--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -21,13 +21,13 @@
 	"devDependencies": {
 		"copy-webpack-plugin": "^5.1.1",
 		"css-loader": "^5.2.6",
-		"deepclone": "^1.0.2",
 		"fast-printf": "^1.6.5",
 		"html-webpack-plugin": "^5.3.1",
 		"keycode": "^2.2.0",
 		"mini-css-extract-plugin": "^1.6.0",
 		"path-browserify": "^1.0.1",
 		"progress-webpack-plugin": "^1.0.12",
+		"rfdc": "^1.3.0",
 		"terser-webpack-plugin": "^5.1.2",
 		"ts-loader": "^8.1.0",
 		"twgl.js": "^4.19.1",
