--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -4,8 +4,8 @@
 	"version": "0.1.0",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "npx webpack",
-		"watch": "env NODE_ENV=development npm run build",
+		"build": "npx rollup -c",
+		"watch": "env NODE_ENV=development npm run build -- --watch",
 		"prodBuild": "env NODE_ENV=production npm run build"
 	},
 	"repository": {
@@ -19,20 +19,19 @@
 	},
 	"homepage": "https://github.com/TheGLander/NotCC#readme",
 	"devDependencies": {
-		"copy-webpack-plugin": "^5.1.1",
-		"css-loader": "^5.2.6",
+		"@rollup/plugin-commonjs": "^19.0.1",
+		"@rollup/plugin-node-resolve": "^13.0.2",
 		"fast-printf": "^1.6.5",
-		"html-webpack-plugin": "^5.3.1",
 		"keycode": "^2.2.0",
-		"mini-css-extract-plugin": "^1.6.0",
-		"path-browserify": "^1.0.1",
-		"progress-webpack-plugin": "^1.0.12",
 		"rfdc": "^1.3.0",
-		"terser-webpack-plugin": "^5.1.2",
-		"ts-loader": "^8.1.0",
+		"rollup": "^2.53.2",
+		"rollup-plugin-analyzer": "^4.0.0",
+		"rollup-plugin-copy": "^3.4.0",
+		"rollup-plugin-css-porter": "^1.0.2",
+		"rollup-plugin-node-polyfills": "^0.2.1",
+		"rollup-plugin-terser": "^7.0.2",
+		"rollup-plugin-typescript2": "^0.30.0",
 		"twgl.js": "^4.19.1",
-		"typescript": "^4.2.3",
-		"webpack": "^5.31.2",
-		"webpack-cli": "^4.6.0"
+		"typescript": "^4.2.3"
 	}
 }
