--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,9 @@ jobs:
           cd gamePlayer
           npm i
           npm run prodBuild
-      - name: Deploy to GH Pages
-        uses: JamesIves/github-pages-deploy-action@3.6.2
+      - name: Deploy to GitHub Pages
+        if: success()
+        uses: crazy-max/ghaction-github-pages@v2
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: dist
+          target_branch: gh-pages
+          build_dir: gamePlayer/dist
