--- a/cli/package.json
+++ b/cli/package.json
@@ -9,7 +9,9 @@
 	"license": "MIT",
 	"private": true,
 	"dependencies": {
-		"typescript": "^4.2.4"
+		"chalk": "^2.4.2",
+		"ora": "^5.4.1",
+		"prompts": "^2.4.1"
 	},
 	"typings": "./lib/index.d.ts",
 	"scripts": {
@@ -18,9 +20,8 @@
 	},
 	"devDependencies": {
 		"@types/node": "^15.3.0",
+		"@types/ora": "^3.2.0",
 		"@types/prompts": "^2.0.12",
-		"chalk": "^2.4.2",
-		"ora": "^5.4.0",
-		"prompts": "^2.4.1"
+		"typescript": "^4.2.4"
 	}
 }
