--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -23,6 +23,7 @@
 		"@rollup/plugin-commonjs": "^19.0.1",
 		"@rollup/plugin-node-resolve": "^13.0.2",
 		"fast-printf": "^1.6.5",
+		"fflate": "^0.7.1",
 		"nollup": "^0.18.2",
 		"rfdc": "^1.3.0",
 		"rollup": "^2.53.2",
