--- a/cli/package.json
+++ b/cli/package.json
@@ -9,8 +9,9 @@
 	"license": "MIT",
 	"private": true,
 	"dependencies": {
+		"@types/progress": "^2.0.5",
 		"chalk": "^2.4.2",
-		"ora": "^5.4.1",
+		"progress": "^2.0.3",
 		"prompts": "^2.4.1"
 	},
 	"typings": "./lib/index.d.ts",
@@ -20,7 +21,6 @@
 	},
 	"devDependencies": {
 		"@types/node": "^15.3.0",
-		"@types/ora": "^3.2.0",
 		"@types/prompts": "^2.0.12",
 		"typescript": "^4.2.4"
 	}
