--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "notcc-player",
+	"name": "@notcc/player",
 	"private": true,
 	"version": "0.1.0",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "npx rollup -c",
 		"watch": "env NODE_ENV=development npm run build -- --watch",
-		"prodBuild": "env NODE_ENV=production npm run build",
+		"build:prod": "env NODE_ENV=production npm run build",
 		"start": "nollup -c"
 	},
 	"repository": {
@@ -22,17 +22,17 @@
 	"devDependencies": {
 		"@rollup/plugin-commonjs": "^19.0.1",
 		"@rollup/plugin-node-resolve": "^13.0.2",
+		"@rollup/plugin-typescript": "^8.3.3",
 		"fast-printf": "^1.6.5",
 		"fflate": "^0.7.1",
 		"nollup": "^0.18.2",
 		"rfdc": "^1.3.0",
 		"rollup": "^2.53.2",
-		"rollup-plugin-analyzer": "^4.0.0",
 		"rollup-plugin-copy": "^3.4.0",
 		"rollup-plugin-css-porter": "^1.0.2",
-		"rollup-plugin-node-polyfills": "^0.2.1",
+		"rollup-plugin-polyfill-node": "^0.9.0",
+		"rollup-plugin-sourcemaps": "^0.6.3",
 		"rollup-plugin-terser": "^7.0.2",
-		"rollup-plugin-typescript2": "^0.31.1",
 		"twgl.js": "^4.19.1",
 		"typescript": "^4.2.3"
 	}
