--- a/logic/package.json
+++ b/logic/package.json
@@ -1,15 +1,17 @@
 {
-	"name": "notcc",
-	"version": "0.1.0",
+	"name": "@notcc/logic",
+	"version": "0.2.0",
 	"description": "NotCC, standing for Nice Optimal Terrific Cool Challenge, is a tile based game(WIP)",
 	"main": "./dist/index.js",
-	"module": "./dist/mjs/index2.js",
+	"module": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "npx rollup -c",
-		"watch": "env NODE_ENV=development npm run build -- --watch",
-		"build-dts": "npx dts-bundle-generator src/index.ts -o dist/index.d.ts",
-		"prodBuild": "env NODE_ENV=production npm run build"
+		"build": "tsc",
+		"watch": "tsc --watch --declaration",
+		"build-dts": "dts-bundle-generator src/index.ts -o dist/index.d.ts",
+		"build:prod": "rm -rf dist && yarn build && yarn build-dts",
+		"publish": "yarn build:prod"
 	},
 	"repository": {
 		"type": "git",
@@ -22,16 +24,16 @@
 	},
 	"homepage": "https://github.com/TheGLander/NotCC#readme",
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "^11.1.0",
-		"@rollup/plugin-node-resolve": "^7.1.3",
 		"dts-bundle-generator": "^5.6.0",
+		"typescript": "^4.7.3"
+	},
+	"dependencies": {
 		"fast-printf": "^1.6.5",
-		"path-browserify": "^1.0.1",
-		"rfdc": "^1.3.0",
-		"rollup": "^2.47.0",
-		"rollup-plugin-analyzer": "^3.3.0",
-		"rollup-plugin-terser": "^7.0.2",
-		"rollup-plugin-typescript2": "^0.25.3",
-		"typescript": "^4.2.3"
-	}
+		"rfdc": "^1.3.0"
+	},
+	"files": [
+		"./dist",
+		"package.json",
+		"README.md"
+	]
 }
