--- a/package.json
+++ b/package.json
@@ -6,5 +6,16 @@
 		"@typescript-eslint/parser": "^4.19.0",
 		"eslint": "^7.0.0",
 		"eslint-config-prettier": "^8.1.0"
+	},
+	"workspaces": {
+		"packages": [
+			"cli",
+			"gamePlayer",
+			"logic"
+		],
+		"nohoist": [
+			"**/path",
+			"**/path/**"
+		]
 	}
 }
