--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -35,5 +35,8 @@
 		"rollup-plugin-terser": "^7.0.2",
 		"twgl.js": "^4.19.1",
 		"typescript": "^4.2.3"
+	},
+	"dependencies": {
+		"base64-js": "^1.5.1"
 	}
 }
