--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -1,40 +1,29 @@
 {
 	"name": "@notcc/player",
 	"private": true,
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "rollup -c",
-		"watch": "env NODE_ENV=development yarn build --watch",
-		"build:prod": "env NODE_ENV=production yarn build"
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/TheGLander/NotCC.git"
 	},
 	"author": "G lander",
-	"license": "ISC",
+	"license": "MIT",
 	"bugs": {
 		"url": "https://github.com/TheGLander/NotCC/issues"
 	},
 	"homepage": "https://github.com/TheGLander/NotCC#readme",
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "^19.0.1",
-		"@rollup/plugin-node-resolve": "^13.0.2",
-		"@rollup/plugin-typescript": "^8.3.3",
+		"base64-js": "^1.5.1",
 		"fast-printf": "^1.6.5",
 		"fflate": "^0.7.1",
-		"nollup": "^0.18.2",
 		"rfdc": "^1.3.0",
-		"rollup": "^2.53.2",
-		"rollup-plugin-copy": "^3.4.0",
-		"rollup-plugin-css-porter": "^1.0.2",
-		"rollup-plugin-polyfill-node": "^0.9.0",
-		"rollup-plugin-sourcemaps": "^0.6.3",
-		"rollup-plugin-terser": "^7.0.2",
-		"typescript": "^4.2.3"
+		"typescript": "^4.9.5",
+		"vite": "^4.1.4"
 	},
-	"dependencies": {
-		"base64-js": "^1.5.1"
-	}
+	"type": "module"
 }
