--- a/gamePlayer/tsconfig.json
+++ b/gamePlayer/tsconfig.json
@@ -1,10 +1,19 @@
 {
 	"compilerOptions": {
-		"esModuleInterop": true,
-		"target": "ES2016",
-		"moduleResolution": "node",
+		"target": "ESNext",
+		"useDefineForClassFields": true,
+		"module": "ESNext",
+		"lib": ["ESNext", "DOM"],
+		"types": ["vite/client"],
+		"moduleResolution": "Node",
+		"strict": true,
 		"resolveJsonModule": true,
-		"sourceMap": true,
-		"strict": true
-	}
+		"isolatedModules": true,
+		"esModuleInterop": true,
+		"noEmit": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noImplicitReturns": true
+	},
+	"include": ["src"]
 }
