--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -18,12 +18,15 @@
 	},
 	"homepage": "https://github.com/TheGLander/NotCC#readme",
 	"devDependencies": {
+		"@types/is-hotkey": "^0.1.7",
 		"base64-js": "^1.5.1",
 		"fast-printf": "^1.6.5",
 		"fflate": "^0.7.1",
+		"is-hotkey": "^0.2.0",
 		"rfdc": "^1.3.0",
 		"typescript": "^4.9.5",
 		"vite": "^4.1.4"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {}
 }
