--- a/cli/package.json
+++ b/cli/package.json
@@ -3,31 +3,29 @@
 	"version": "0.1.0",
 	"description": "A CLI for verifying NotCC solutions!",
 	"main": "./dist/index.js",
+	"scripts": {
+		"dev": "tsc",
+		"watch": "tsc --watch"
+	},
+	"bin": {
+		"notcc": "./dist/index.js"
+	},
 	"author": {
 		"name": "G lander"
 	},
 	"license": "MIT",
 	"dependencies": {
-		"@glander/ph-ack": "^1.0.0",
 		"@notcc/logic": "^0.2.0",
 		"@types/progress": "^2.0.5",
-		"chalk": "^2.4.2",
+		"picocolors": "^1.0.0",
 		"progress": "^2.0.3",
 		"prompts": "^2.4.1",
 		"yargs": "^17.5.1"
-	},
-	"typings": "./lib/index.d.ts",
-	"scripts": {
-		"build": "tsc",
-		"watch": "tsc --watch"
 	},
 	"devDependencies": {
 		"@types/node": "^15.3.0",
 		"@types/prompts": "^2.0.12",
 		"@types/yargs": "^17.0.10",
 		"typescript": "^4.7.3"
-	},
-	"bin": {
-		"notcc": "./dist/index.js"
 	}
 }
