--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -24,6 +24,7 @@
 		"fast-printf": "^1.6.5",
 		"fflate": "^0.7.1",
 		"is-hotkey": "^0.2.0",
+		"less": "^4.1.3",
 		"rfdc": "^1.3.0",
 		"typescript": "^4.9.5",
 		"vite": "^4.1.4"
