Add dependency reoptimization parameters to Vite scripts Vite doesn't detect monorepo package changes, so we have to tell it that something may have changed

--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -3,8 +3,8 @@
 	"private": true,
 	"version": "0.2.0",
 	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
+		"dev": "vite --force",
+		"build": "tsc && vite build --force",
 		"preview": "vite preview"
 	},
 	"repository": {
