--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -20,6 +20,7 @@
 	"devDependencies": {
 		"@types/is-hotkey": "^0.1.7",
 		"@types/path-browserify": "^1.0.0",
+		"@types/rfdc": "^1.2.0",
 		"base64-js": "^1.5.1",
 		"fast-printf": "^1.6.5",
 		"fflate": "^0.7.1",
