--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -20,7 +20,6 @@
 	"devDependencies": {
 		"@types/is-hotkey": "^0.1.7",
 		"@types/path-browserify": "^1.0.0",
-		"@types/rfdc": "^1.2.0",
 		"base64-js": "^1.5.1",
 		"fast-printf": "^1.6.5",
 		"fflate": "^0.7.1",
@@ -32,6 +31,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@notcc/logic": "workspace:^0.2.0",
 		"lz-string": "^1.5.0",
 		"path-browserify": "^1.0.1"
 	}
