--- a/logic/tsconfig.json
+++ b/logic/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"esModuleInterop": true,
-		"target": "ES2016",
+		"target": "ES2019",
 		"module": "CommonJS",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
@@ -9,7 +9,8 @@
 		"sourceMap": true,
 		"strict": true,
 		"outDir": "dist",
-		"allowJs": true
+		"allowJs": true,
+		"lib": ["ES2019.Object"]
 	},
 	"buildOptions": {
 		"incremental": true
