--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
 		"quotes": [0], //Prettier automatically handles them
 		"@typescript-eslint/ban-types": ["error", { "types": { "object": false } }],
 		"@typescript-eslint/no-this-alias": [0],
-		"@typescript-eslint/no-non-null-assertion": [0]
+		"@typescript-eslint/no-non-null-assertion": [0],
+		"@typescript-eslint/no-explicit-any": [0]
 	}
 }
