--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,17 +11,15 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x]
-
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'pnpm'
+        node-version: 18
+    - name: Setup pnpm
+      uses: pnpm/action-setup@v2.2.4
+      version: latest
     - run: pnpm ci
     - run: pnpm build-cli
     - run: pnpm test --sets-dir .temp/sets --set cc2lp1 --set CC2LP1V
