--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,7 +19,9 @@ jobs:
         node-version: 18
     - name: Setup pnpm
       uses: pnpm/action-setup@v2.2.4
-      version: latest
+      with:
+        version: latest
+        run_install: false
     - run: pnpm ci
     - run: pnpm build-cli
     - run: pnpm test --sets-dir .temp/sets --set cc2lp1 --set CC2LP1V
