--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,5 +22,11 @@ jobs:
       with:
         version: latest
         run_install: false
+    - name: Cache
+      id: cache
+      uses: actions/cache@v3
+      with:
+        path: testSets
+        key: ${{ runner.os }}-test-sets
     - run: pnpm build-cli
-    - run: pnpm test --sets-dir .temp/sets --set cc2lp1 --set CC2LP1V
+    - run: pnpm test -- --sets-dir testSets --set cc2lp1 --set CC2LP1V
