Add a workspace root CLI dependency

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "notcc-global-things",
 	"private": true,
 	"devDependencies": {
+		"@notcc/cli": "workspace:^",
 		"@typescript-eslint/eslint-plugin": "^4.19.0",
 		"@typescript-eslint/parser": "^4.19.0",
 		"eslint": "^7.0.0",
@@ -11,7 +12,7 @@
 	},
 	"scripts": {
 		"build-web": "pnpm i && pnpm --filter @notcc/logic run build && pnpm --filter @notcc/player build",
-		"build-cli": "pnpm i && pnpm --filter @notcc/logic run build && pnpm --filter @notcc/cli build",
+		"build-cli": "pnpm i && pnpm --filter @notcc/logic run build && pnpm --filter @notcc/cli build && pnpm i",
 		"test": "zx ./testing.mjs"
 	}
 }
