--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,31 +2,30 @@ name: Testing
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
-  build:
-
+  testing:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
-    - name: Setup pnpm
-      uses: pnpm/action-setup@v2.2.4
-      with:
-        version: latest
-        run_install: false
-    - name: Cache
-      id: cache
-      uses: actions/cache@v3
-      with:
-        path: testSets
-        key: ${{ runner.os }}-test-sets
-    - run: pnpm build-cli
-    - run: pnpm test -- --sets-dir testSets --set cc2lp1 --set CC2LP1V
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2.2.4
+        with:
+          version: latest
+          run_install: false
+      - name: Cache
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: testSets
+          key: ${{ runner.os }}-test-sets
+      - run: pnpm build-cli
+      - run: pnpm test -- --sets-dir testSets --sync-dir syncfiles --set cc2lp1 --set CC2LP1V
