--- a/cli/package.json
+++ b/cli/package.json
@@ -17,12 +17,14 @@
 	"dependencies": {
 		"@notcc/logic": "^0.2.0",
 		"@types/progress": "^2.0.5",
+		"ini": "^4.1.0",
 		"picocolors": "^1.0.0",
 		"progress": "^2.0.3",
 		"prompts": "^2.4.1",
 		"yargs": "^17.5.1"
 	},
 	"devDependencies": {
+		"@types/ini": "^1.3.31",
 		"@types/node": "^15.3.0",
 		"@types/prompts": "^2.0.12",
 		"@types/yargs": "^17.0.10",
