--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -21,6 +21,7 @@
 		"@types/is-hotkey": "^0.1.7",
 		"@types/path-browserify": "^1.0.0",
 		"base64-js": "^1.5.1",
+		"dialog-polyfill": "^0.5.6",
 		"fast-printf": "^1.6.5",
 		"fflate": "^0.7.1",
 		"is-hotkey": "^0.2.0",
