--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -2,8 +2,8 @@
 	"compilerOptions": {
 		"esModuleInterop": true,
 		"target": "ES2016",
-		"module": "CommonJS",
-		"moduleResolution": "node",
+		"module": "ESNext",
+		"moduleResolution": "NodeNext",
 		"resolveJsonModule": true,
 		"sourceMap": true,
 		"strict": true,
