--- a/logic/package.json
+++ b/logic/package.json
@@ -5,10 +5,12 @@
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
+	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build-proto": "pbjs -t json-module src/parsers/nccs.proto -o src/parsers/nccs.pb.js && pnpm build-proto-types",
-		"build-proto-types": "pbjs -t static-module src/parsers/nccs.proto -o tmp_nccs.js && pbts -o src/parsers/nccs.pb.d.ts tmp_nccs.js;rm tmp_nccs.js",
+		"build-proto": "pbjs -t static-module --force-number -w es6 src/parsers/nccs.proto -o src/parsers/nccs.pb.js && pnpm build-proto-types",
+		"build-proto-types": "pbjs -t static-module --force-number -w es6 src/parsers/nccs.proto -o tmp_nccs.js && pbts -o src/parsers/nccs.pb.d.ts tmp_nccs.js && pnpm make-proto-hacks;rm tmp_nccs.js",
+		"make-proto-hacks": "sed -i '/import Long = require(\"long\");/d' ./src/parsers/nccs.pb.d.ts && sed -i 's:import\\ \\*\\ as\\ \\$protobuf\\ from\\ \\\"protobufjs/minimal\\\"\\;:import\\ \\$protobuf\\ from\\ \\\"protobufjs/minimal.js\\\"\\;:' ./src/parsers/nccs.pb.js",
 		"build-src": "tsc",
 		"dev": "tsc --watch --declaration",
 		"copy-proto-files": "cp ./src/parsers/*.pb.* ./dist/parsers",
@@ -27,7 +29,6 @@
 	"homepage": "https://github.com/TheGLander/NotCC#readme",
 	"devDependencies": {
 		"@types/node": "^15.3.0",
-		"long": "^5.2.3",
 		"protobufjs-cli": "^1.1.1",
 		"typescript": "^4.7.3"
 	},
