Don't show the inspector when opening the desktop player

--- a/desktopPlayer/neutralino.config.json
+++ b/desktopPlayer/neutralino.config.json
@@ -11,7 +11,7 @@
 		"window": {
 			"title": "NotCC",
 			"icon": "/webDist/iconBig.png",
-			"enableInspector": true,
+			"enableInspector": false,
 			"resizable": true,
 			"exitProcessOnClose": true
 		}
