Add desktop release automatic releases

--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,6 @@ original.bmp
 
 desktopPlayer/bin
 desktopPlayer/.tmp
+desktopPlayer/artifacts
+desktopPlayer/NotCC.app/Contents/MacOS
+desktopPlayer/NotCC.zip
