Remake the set selector screen to give room to the gliderbot set list

--- a/desktopPlayer/neutralino.config.json
+++ b/desktopPlayer/neutralino.config.json
@@ -10,7 +10,7 @@
 	"modes": {
 		"window": {
 			"title": "NotCC",
-			"icon": "/webDist/iconBig.png",
+			"icon": "/webDist/iconDesktop.png",
 			"enableInspector": false,
 			"resizable": true,
 			"exitProcessOnClose": true
