--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
 		"@typescript-eslint/ban-types": ["error", { "types": { "object": false } }],
 		"@typescript-eslint/no-this-alias": [0],
 		"@typescript-eslint/no-non-null-assertion": [0],
-		"@typescript-eslint/no-explicit-any": [0]
+		"@typescript-eslint/no-explicit-any": [0],
+		"no-constant-condition": ["error", { "checkLoops": false }]
 	}
 }
