--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -20,6 +20,8 @@
 	"homepage": "https://github.com/TheGLander/NotCC#readme",
 	"devDependencies": {
 		"@neutralinojs/lib": "^3.9.0",
+		"@notcc/logic": "workspace:^0.2.0",
+		"@types/clone": "^2.1.1",
 		"@types/is-hotkey": "^0.1.7",
 		"@types/path-browserify": "^1.0.0",
 		"base64-js": "^1.5.1",
@@ -28,13 +30,13 @@
 		"fflate": "^0.7.1",
 		"is-hotkey": "^0.2.0",
 		"less": "^4.1.3",
-		"rfdc": "^1.3.0",
-		"typescript": "^4.9.5",
-		"vite": "^4.1.4",
-		"@notcc/logic": "workspace:^0.2.0",
 		"lz-string": "^1.5.0",
-		"path-browserify": "^1.0.1"
+		"path-browserify": "^1.0.1",
+		"typescript": "^4.9.5",
+		"vite": "^4.1.4"
 	},
 	"type": "module",
-	"dependencies": {}
+	"dependencies": {
+		"clone": "^2.1.2"
+	}
 }
