--- a/logic/package.json
+++ b/logic/package.json
@@ -28,14 +28,15 @@
 	},
 	"homepage": "https://github.com/TheGLander/NotCC#readme",
 	"devDependencies": {
+		"@types/clone": "^2.1.1",
 		"@types/node": "^15.3.0",
+		"clone": "^2.1.2",
 		"protobufjs-cli": "^1.1.1",
 		"typescript": "^4.7.3"
 	},
 	"dependencies": {
 		"fast-printf": "^1.6.5",
-		"protobufjs": "^7.2.2",
-		"rfdc": "^1.3.0"
+		"protobufjs": "^7.2.2"
 	},
 	"files": [
 		"./dist",
