--- a/cli/package.json
+++ b/cli/package.json
@@ -16,19 +16,19 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"@notcc/logic": "^0.2.0",
+		"@notcc/logic": "workspace:^",
 		"@types/progress": "^2.0.5",
-		"ini": "^4.1.0",
+		"ini": "^4.1.1",
 		"picocolors": "^1.0.0",
 		"progress": "^2.0.3",
-		"prompts": "^2.4.1",
-		"yargs": "^17.5.1"
+		"prompts": "^2.4.2",
+		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
 		"@types/ini": "^1.3.31",
-		"@types/node": "^15.3.0",
-		"@types/prompts": "^2.0.12",
-		"@types/yargs": "^17.0.10",
-		"typescript": "^4.7.3"
+		"@types/node": "^15.14.9",
+		"@types/prompts": "^2.4.4",
+		"@types/yargs": "^17.0.24",
+		"typescript": "^4.9.5"
 	}
 }
