--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -19,21 +19,21 @@
 	},
 	"homepage": "https://github.com/TheGLander/NotCC#readme",
 	"devDependencies": {
-		"@neutralinojs/lib": "^3.9.0",
-		"@notcc/logic": "workspace:^0.2.0",
+		"@neutralinojs/lib": "^3.10.0",
+		"@notcc/logic": "workspace:^",
 		"@types/clone": "^2.1.1",
 		"@types/is-hotkey": "^0.1.7",
 		"@types/path-browserify": "^1.0.0",
 		"base64-js": "^1.5.1",
 		"dialog-polyfill": "^0.5.6",
-		"fast-printf": "^1.6.5",
-		"fflate": "^0.7.1",
+		"fast-printf": "^1.6.9",
+		"fflate": "^0.7.4",
 		"is-hotkey": "^0.2.0",
 		"less": "^4.1.3",
 		"lz-string": "^1.5.0",
 		"path-browserify": "^1.0.1",
 		"typescript": "^4.9.5",
-		"vite": "^4.1.4"
+		"vite": "^4.3.9"
 	},
 	"type": "module",
 	"dependencies": {
