--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
 	"arrowParens": "avoid",
 	"semi": false,
 	"singleQuote": false,
-	"trailingComma": "es5"
+	"trailingComma": "es5",
+	"plugins": ["prettier-plugin-tailwindcss"]
 }
