--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -1,42 +1,48 @@
 {
 	"name": "@notcc/player",
 	"private": true,
-	"version": "0.2.0",
+	"version": "2.0.0",
 	"scripts": {
-		"dev": "vite --force",
-		"build": "tsc && vite build --force",
-		"build-desktop": "VITE_BUILD_TYPE=desktop pnpm build",
-		"preview": "vite preview"
+		"dev": "vite",
+		"build:ssg": "vite build -c vite.config.js --ssr src/main-ssg.tsx --outDir dist/ssg",
+		"build": "rm -rf dist && tsc && pnpm build:ssg && vite build && rm -r dist/ssg",
+		"build:desktop": "VITE_BUILD_TYPE=desktop pnpm build"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/TheGLander/NotCC.git"
 	},
 	"author": "G lander",
-	"license": "MIT",
+	"license": "GPL-3.0-or-later",
 	"bugs": {
 		"url": "https://github.com/TheGLander/NotCC/issues"
 	},
 	"homepage": "https://github.com/TheGLander/NotCC#readme",
+	"type": "module",
 	"devDependencies": {
 		"@neutralinojs/lib": "^3.12.0",
 		"@notcc/logic": "workspace:^",
-		"@types/clone": "^2.1.3",
-		"@types/is-hotkey": "^0.1.8",
-		"@types/path-browserify": "^1.0.1",
-		"base64-js": "^1.5.1",
-		"dialog-polyfill": "^0.5.6",
+		"@preact/preset-vite": "^2.6.0",
+		"@types/clone": "^2.1.4",
+		"@types/is-hotkey": "^0.1.9",
+		"@types/node": "^15.14.9",
+		"@types/path-browserify": "^1.0.2",
+		"autoprefixer": "^10.4.16",
+		"clone": "^2.1.2",
 		"fast-printf": "^1.6.9",
 		"fflate": "^0.7.4",
 		"is-hotkey": "^0.2.0",
-		"less": "^4.2.0",
+		"jotai": "^2.5.1",
 		"lz-string": "^1.5.0",
 		"path-browserify": "^1.0.1",
-		"typescript": "^4.9.5",
+		"postcss": "^8.4.31",
+		"preact": "^10.19.2",
+		"preact-render-to-string": "^6.3.1",
+		"react": "npm:@preact/compat",
+		"react-dom": "npm:@preact/compat",
+		"tailwind-merge": "^2.0.0",
+		"tailwindcss": "^3.3.5",
+		"typescript": "^5.2.2",
 		"vite": "^4.5.0"
-	},
-	"type": "module",
-	"dependencies": {
-		"clone": "^2.1.2"
 	}
 }
