--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -40,6 +40,7 @@
 		"preact-render-to-string": "^6.3.1",
 		"react": "npm:@preact/compat",
 		"react-dom": "npm:@preact/compat",
+		"react-responsive": "^9.0.2",
 		"tailwind-merge": "^2.0.0",
 		"tailwindcss": "^3.3.5",
 		"typescript": "^5.2.2",
