--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -33,6 +33,7 @@
 		"fflate": "^0.7.4",
 		"is-hotkey": "^0.2.0",
 		"jotai": "^2.5.1",
+		"jotai-effect": "^0.2.3",
 		"lz-string": "^1.5.0",
 		"path-browserify": "^1.0.1",
 		"postcss": "^8.4.31",
