--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -4,7 +4,7 @@
 	"version": "2.0.0",
 	"scripts": {
 		"dev": "vite",
-		"build:ssg": "vite build -c vite.config.js --ssr src/main-ssg.tsx --outDir dist/ssg",
+		"build:ssg": "SSG=true vite build -c vite.config.js --ssr src/main-ssg.tsx --outDir dist/ssg",
 		"build": "rm -rf dist && tsc && pnpm build:ssg && vite build && rm -r dist/ssg",
 		"build:desktop": "VITE_BUILD_TYPE=desktop pnpm build"
 	},
@@ -46,6 +46,8 @@
 		"tailwind-merge": "^2.0.0",
 		"tailwindcss": "^3.3.5",
 		"typescript": "^5.2.2",
-		"vite": "^4.5.0"
+		"vite": "^4.5.0",
+		"vite-plugin-pwa": "^0.17.4",
+		"workbox-window": "^7.0.0"
 	}
 }
