--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -5,8 +5,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build:ssg": "SSG=true vite build -c vite.config.js --ssr src/main-ssg.tsx --outDir dist/ssg",
-		"build": "rm -rf dist && tsc && pnpm build:ssg && vite build && rm -r dist/ssg",
-		"build:desktop": "VITE_BUILD_TYPE=desktop pnpm build"
+		"build": "rm -rf dist && tsc && pnpm build:ssg && vite build && rm -r dist/ssg"
 	},
 	"repository": {
 		"type": "git",
@@ -20,7 +19,6 @@
 	"homepage": "https://github.com/TheGLander/NotCC#readme",
 	"type": "module",
 	"devDependencies": {
-		"@neutralinojs/lib": "^3.12.0",
 		"@notcc/logic": "workspace:^",
 		"@preact/preset-vite": "^2.6.0",
 		"@types/clone": "^2.1.4",
