--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -29,6 +29,7 @@
 		"clone": "^2.1.2",
 		"fast-printf": "^1.6.9",
 		"fflate": "^0.7.4",
+		"idb-keyval": "^6.2.1",
 		"is-hotkey": "^0.2.0",
 		"jotai": "^2.5.1",
 		"jotai-effect": "^0.2.3",
