--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -42,6 +42,7 @@
 		"react-dom": "npm:@preact/compat",
 		"react-draggable": "^4.4.6",
 		"react-responsive": "^9.0.2",
+		"suspend-react": "^0.1.3",
 		"tailwind-merge": "^2.0.0",
 		"tailwindcss": "^3.3.5",
 		"typescript": "^5.2.2",
