--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,11 +13,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
-        uses: actions/setup-node@4
+        uses: actions/setup-node@v4
         with:
           node-version: 18
       - name: Setup pnpm
-        uses: pnpm/action-setup@4
+        uses: pnpm/action-setup@4.0.0
         with:
           version: latest
           run_install: false
