--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: 18
       - name: Setup pnpm
-        uses: pnpm/action-setup@4.0.0
+        uses: pnpm/action-setup@v4
         with:
           version: latest
           run_install: false
