--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -37,8 +37,8 @@
 		"fflate": "^0.7.4",
 		"idb-keyval": "^6.2.1",
 		"is-hotkey": "^0.2.0",
-		"jotai": "^2.5.1",
-		"jotai-effect": "^0.2.3",
+		"jotai": "^2.10.1",
+		"jotai-effect": "^1.0.3",
 		"lz-string": "^1.5.0",
 		"path-browserify": "^1.0.1",
 		"postcss": "^8.4.31",
@@ -57,6 +57,7 @@
 		"workbox-window": "^7.0.0"
 	},
 	"dependencies": {
-		"@dagrejs/dagre": "^1.0.4"
+		"@dagrejs/dagre": "^1.0.4",
+		"react-error-boundary": "^4.0.13"
 	}
 }
