Disable the inspector in desktop builsd]

--- a/gamePlayer/neutralino.config.json
+++ b/gamePlayer/neutralino.config.json
@@ -19,7 +19,7 @@
 		"window": {
 			"title": "NotCC",
 			"icon": "/dist/iconDesktop.png",
-			"enableInspector": true,
+			"enableInspector": false,
 			"resizable": true,
 			"exitProcessOnClose": true
 		}
