--- a/gamePlayer/package.json
+++ b/gamePlayer/package.json
@@ -24,41 +24,41 @@
 	"homepage": "https://github.com/TheGLander/NotCC#readme",
 	"type": "module",
 	"devDependencies": {
-		"@neutralinojs/lib": "^5.3.0",
-		"@neutralinojs/neu": "^11.2.2",
+		"@neutralinojs/lib": "^5.6.0",
+		"@neutralinojs/neu": "^11.5.0",
 		"@notcc/logic": "workspace:^",
-		"@preact/preset-vite": "^2.6.0",
+		"@preact/preset-vite": "^2.10.2",
 		"@types/clone": "^2.1.4",
-		"@types/is-hotkey": "^0.1.9",
+		"@types/is-hotkey": "^0.1.10",
 		"@types/node": "^15.14.9",
-		"@types/path-browserify": "^1.0.2",
-		"autoprefixer": "^10.4.16",
+		"@types/path-browserify": "^1.0.3",
+		"autoprefixer": "^10.4.21",
 		"clone": "^2.1.2",
-		"fast-printf": "^1.6.9",
+		"fast-printf": "^1.6.10",
 		"fflate": "^0.7.4",
-		"idb-keyval": "^6.2.1",
+		"idb-keyval": "^6.2.2",
 		"is-hotkey": "^0.2.0",
-		"jotai": "^2.10.1",
-		"jotai-effect": "^1.0.3",
+		"jotai": "^2.13.1",
+		"jotai-effect": "^1.1.6",
 		"lz-string": "^1.5.0",
 		"path-browserify": "^1.0.1",
-		"postcss": "^8.4.31",
-		"preact": "^10.19.2",
-		"preact-render-to-string": "^6.3.1",
-		"react": "npm:@preact/compat",
-		"react-dom": "npm:@preact/compat",
-		"react-draggable": "^4.4.6",
+		"postcss": "^8.5.6",
+		"preact": "^10.27.0",
+		"preact-render-to-string": "^6.5.13",
+		"react": "npm:@preact/compat@^18.3.1",
+		"react-dom": "npm:@preact/compat@^18.3.1",
+		"react-draggable": "^4.5.0",
 		"react-responsive": "^9.0.2",
 		"suspend-react": "^0.1.3",
-		"tailwind-merge": "^2.0.0",
-		"tailwindcss": "^3.3.5",
-		"typescript": "^5.2.2",
-		"vite": "^4.5.0",
+		"tailwind-merge": "^2.6.0",
+		"tailwindcss": "^3.4.17",
+		"typescript": "^5.9.2",
+		"vite": "^4.5.14",
 		"vite-plugin-pwa": "^1.0.2",
 		"workbox-window": "^7.3.0"
 	},
 	"dependencies": {
-		"@dagrejs/dagre": "^1.0.4",
-		"react-error-boundary": "^4.0.13"
+		"@dagrejs/dagre": "^1.1.5",
+		"react-error-boundary": "^4.1.2"
 	}
 }
