Add desktop update support

--- a/gamePlayer/neutralino.config.json
+++ b/gamePlayer/neutralino.config.json
@@ -13,7 +13,8 @@
 		"os.showFolderDialog",
 		"filesystem.*",
 		"os.execCommand",
-		"debug.log"
+		"debug.log",
+		"app.killProcess"
 	],
 	"modes": {
 		"window": {
